se elimino un parrafo

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 			</header>
 			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
 		</article>
+
+		<article>
+			<header>
 		
 	</section>
 
